app.css
* {
  margin: 0px 0px;
  font-family: Lato, sans-serif, serif;
  box-sizing: border-box;
  font-size: 18px;
}
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}
.font_btn {
  font-size: 20px;
  font-weight: 600;
}
#vc_list {
  /* margin-top: -5px; */
}
.nav-bar {
  padding: 0.5rem 2.5rem !important;
  background-color: #343a40 !important;
}
.nav__wrapper {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  align-content: center;
  width: 40%;
  height: 15%;
  margin-left: -5px;
}
.logo {
  background-color: white;
}

.nav__setAvailBW {
  width: 451px;
  padding: 7px 15px;
  margin-right: 8px;
  border-radius: 5px;
  border: none;
  outline: none;
}
.glyphicon {
  font-size: 3rem;
}
.btn__setbandwidth {
  background: #343a40;
  outline: white;
  border: 1px solid white;
  color: white;
  padding: 6px 25px;
}
.btn__setbandwidth:focus {
  outline: none !important;
  border: none !important;
  /* border: 1px solid white;
  color: white; */
}
.right-wrapper {
  background-color: white;
  padding: 10px 10px;
  margin-top: 26px;
}
.brand_name {
  font-size: 24px;
  color: white;
  font-weight: 500;
  margin: 0px 15px 0px 0px;
}
.fa-trash {
  cursor: pointer;
}
.section-top {
  background-color: #edf0f0;
  width: 100%;
  margin-top: -3rem;
}

.top-content {
  padding: 1rem 2.5rem;
  padding-bottom: 3rem;
}

.table-result {
  padding: 0px 3.3rem;
}

/* CSS GRID */
.form_wrapper {
  margin-top: 54px;
  padding: 35px 37px 20px 20px;
  display: grid;
  grid-column-gap: 1em;
  grid-row-gap: 2px;
  grid-template-columns: 50% 50%;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  background-color: #ffffff;
  box-shadow: 0px 7px 13px -8px rgba(0, 0, 0, 0.34);
  border-radius: 5px;
}
.list-group-item {
  padding: 10px 10px;
}

.vc__lable {
  /* margin-top: -36px; */
  margin-top: 3rem;
}

.vc_name {
  grid-column-start: span 2;
}
/* .vc_avail {
  grid-column-start: span 2;
} */
.vc__add {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  align-self: center;
}
.vc__add:hover {
  color: #fff;
}

.icon-add {
  widows: 20px;
  height: 20px;
}

.btn-outline-info {
  color: #444444 !important;
  border-color: #00d1cd;
}
.btn-outline-info:focus {
  box-shadow: none;
}
.btn-outline-info:hover {
  color: #fff !important;
  background: #00d1cd;
}
.vc__calc {
  align-self: center;
}
.vc__add:focus {
  outline: none;
}
.btn-outline-dark:focus {
  box-shadow: none !important;
}

/* .vc_list {
} */
.res__title {
  color: #343a40;
}
/* @media screen and (max-width: 850px) {
  .vc_list {
    margin-top: 0rem;
    margin-bottom: 2rem;
  }
}
@media screen and (max-width: 576px) {
  .vc_list {
    margin-top: 2rem;
  }
} */
@keyframes slideL {
  100% {
    transform: translateX(-1rem);
  }
}
@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.delete {
  opacity: 0;
  cursor: none;
  padding-top: 0;
  padding-bottom: 0;
  margin: 0 0;
}

.vc_desc {
  display: flex;
  justify-content: space-around;
  width: 100%;
  transform: translateX(0);
  /* padding: 0px 5px; */
}
.vc_desc:hover {
  animation: slideL forwards ease-in 0.2s;
}
.vc_desc:hover .delete {
  animation: fadein forwards 0.2s;
  opacity: 1;
}
.footer {
  display: flex;
  justify-content: space-between;
  background-color: #343a40;
  color: white;
  padding: 15px;
  margin: 10vh 0 0 0;
}

